feat(SettingsModule): create new /settings endpoints to handle timezone
